# project_informatyczny

./: LICENSE  README.md  app.py  openapi.yaml  pyproject.toml  requirements.txt  wsgi.py
RealFinanceBackend/: manage.py
RealFinanceBackend/RealFinanceBackend/: asgi.py  settings.py  urls.py  wsgi.py
api_pull/apipull/: main.py
app/: __init__.py  extension.py
application/: __init__.py  extension.py
auth/: routes.py
currency/: currency_service.py  models.py  routes.py  schemas.py
scripts/: trim_decimal.py
transaction/: models.py  routes.py
user/: models.py  routes.py  schema.py  wallet_service.py
