[tool.poetry]
name = "realfinancebackend"
version = "0.1.0"
description = ""
authors = ["sovwva <sovwva7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
asyncpg = "^0.30.0"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
